cluster-api-core/namespace_capi-webhook-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capi-webhook-system
  labels:
    cluster.x-k8s.io/provider: cluster-api
    control-plane: controller-manager
