cluster-api-core/mutatingwebhookconfiguration_capi-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: capi-mutating-webhook-configuration
  labels:
    cluster.x-k8s.io/provider: cluster-api
  annotations:
    cert-manager.io/inject-ca-from: capi-webhook-system/capi-serving-cert
webhooks:
  - name: default.cluster.cluster.x-k8s.io
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-cluster-x-k8s-io-v1alpha3-cluster
    failurePolicy: Fail
    matchPolicy: Equivalent
    rules:
      - resources:
          - clusters
        apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
    sideEffects: None
  - name: default.machine.cluster.x-k8s.io
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-cluster-x-k8s-io-v1alpha3-machine
      caBundle: Cg==
    failurePolicy: Fail
    matchPolicy: Equivalent
    rules:
      - resources:
          - machines
        apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
    sideEffects: None
  - name: default.machinedeployment.cluster.x-k8s.io
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-cluster-x-k8s-io-v1alpha3-machinedeployment
      caBundle: Cg==
    failurePolicy: Fail
    matchPolicy: Equivalent
    rules:
      - resources:
          - machinedeployments
        apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
    sideEffects: None
  - name: default.machinehealthcheck.cluster.x-k8s.io
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-cluster-x-k8s-io-v1alpha3-machinehealthcheck
      caBundle: Cg==
    failurePolicy: Fail
    matchPolicy: Equivalent
    rules:
      - resources:
          - machinehealthchecks
        apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
    sideEffects: None
  - name: default.machineset.cluster.x-k8s.io
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-cluster-x-k8s-io-v1alpha3-machineset
      caBundle: Cg==
    failurePolicy: Fail
    matchPolicy: Equivalent
    rules:
      - resources:
          - machinesets
        apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
    sideEffects: None
  - name: default.exp.machinepool.cluster.x-k8s.io
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-exp-cluster-x-k8s-io-v1alpha3-machinepool
      caBundle: Cg==
    failurePolicy: Fail
    matchPolicy: Equivalent
    rules:
      - resources:
          - machinepools
        apiGroups:
          - exp.cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
    sideEffects: None
  - name: default.clusterresourceset.addons.cluster.x-k8s.io
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-addons-cluster-x-k8s-io-v1alpha3-clusterresourceset
      caBundle: Cg==
    failurePolicy: Fail
    matchPolicy: Equivalent
    rules:
      - resources:
          - clusterresourcesets
        apiGroups:
          - addons.cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
    sideEffects: None
